[Blink/Paint] Descendant bounds should be snapped before passing to CompositingRecorder

It is almost never correct to cast LayoutUnit to floats directly. They
should be snapped first to determine the used layout position.

BUG=798627

Change-Id: Ib0e3a5139e393cee3fdc643c66555afe05777eb5